updated the brand determination logic to be if 'skin-salvation' == skin-salvation but all else is With&Within for the template.suffix as there's the aw--diy suffices as well.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "shopify theme dev --store skinsalvation-acne-clinic.myshopify.com",
     "min": "node minify.js"
   },
   "author": "",
